06_rect/grade.txt
Grading at Tue Sep  8 09:01:10 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘canonicalize’:
rectangle.c:33:3: error: ‘i’ undeclared (first use in this function)
   i if (r.width < 0)
   ^
rectangle.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
rectangle.c:33:5: error: expected ‘;’ before ‘if’
   i if (r.width < 0)
     ^
rectangle.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
